fix broken link

--- a/docs/pages/inner_workings/architecture.mdx
+++ b/docs/pages/inner_workings/architecture.mdx
@@ -105,7 +105,7 @@ This backend is supposed to handle revalidation requests from the revalidation q
 
 OpenNext will create a `.open-next/warmer-function` folder containing the warmer backend.
 
-Read more on [how warming works](/inner_workings/warming).
+Read more on [how warming works](/v2/inner_workings/warming).
 
 #### Tag Provider backend
 
