--- a/docs/pages/config.mdx
+++ b/docs/pages/config.mdx
@@ -7,9 +7,17 @@ There is two build arguments that you can pass to the `open-next build` command:
 
 ### Configuration File
 
-For personalisation you need to create a file `open-next.config.ts` at the same place as your `next.config.js`, and export a default object that satisfies the `OpenNextConfig` interface.
+For personalisation you need to create a file `open-next.config.ts` at the same place as your `next.config.js`, and export a default object that satisfies the `OpenNextConfig` interface. It is possible to not have an `open-next.config.ts` file, the default configuration will then be applied automatically.
 
 This file needs to be placed at the same level as your `next.config.js` file.
+
+If you have an `open-next.config.ts` file, make sure you have atleast this:
+
+```ts
+export default {
+  default: {},
+};
+```
 
 If you want to take a look at some simple configuration examples, you can check the [simple example](/config/simple_example).
 
