add example for running as classic Node server

--- a/docs/pages/config/simple_example.mdx
+++ b/docs/pages/config/simple_example.mdx
@@ -102,6 +102,43 @@ const config = {
 export default config;
 ```
 
+## Bundle for a classic Node server (With function splitting)
+
+<Callout type="info" emoji="i">
+This is not implemented in sst yet. You'll have to use your own IAC construct to deploy this.
+
+Be aware that this uses the exact same system for ISR/SSG as the default lambda setup. So it will have to have all the proper permissions and env variable to interact with S3, DynamoDB and SQS (Or whatever you override it with). You can see [here](/inner_workings/components/server/node#special-overrides) for more details
+</Callout>
+
+```ts
+import type { OpenNextConfig } from 'open-next/types/open-next';
+const config = {
+  // In this case, the default server is meant to run as a classic Node server
+  // To execute the server you need to run `node index.mjs` inside `.open-next/server-functions/default`
+  default: {
+    override: {
+      wrapper: 'node',
+      converter: 'node',
+      // This is necessary to generate a simple dockerfile and for the generated output to know that it needs to deploy on docker
+      // You can also provide a string here (i.e. the content of your Dockerfile) which will be used to create the dockerfile
+      // You don't have to provide this if you plan on not using docker, or if you plan on using your own custom dockerfile
+      generateDockerfile: true,
+    },
+  },
+  // You can define multiple functions here, each with its own routes, patterns and overrides
+  functions: {
+    // In this case both the api route is in lambda and the rest is in node
+    myFn: {
+      // Patterns needs to use the glob pattern
+      patterns: ['api/*'],
+      routes: ['app/api/test/route', 'app/api/test2/route'],
+    },
+  },
+} satisfies OpenNextConfig;
+
+export default config;
+```
+
 ## Edge runtime splitted function
 
 This will generate 2 server functions, the default one and the edge one. The edge one will still be deployed as a lambda function, but it will be deployed in the edge runtime.
