--- a/docs/pages/inner_workings/caching.mdx
+++ b/docs/pages/inner_workings/caching.mdx
@@ -80,33 +80,33 @@ await invalidateCloudFrontPaths(["/page/*"]);
 For on-demand revalidation via the [`next/cache` module](https://nextjs.org/docs/app/building-your-application/data-fetching/revalidating#using-on-demand-revalidation), if you want to retrieve the associated paths for a given tag, you can use this function:
 
 ```ts
-import { DynamoDBClient, QueryCommand } from '@aws-sdk/client-dynamodb'
+import { DynamoDBClient, QueryCommand } from '@aws-sdk/client-dynamodb';
 
-const client = new DynamoDBClient({ region: process.env.CACHE_BUCKET_REGION })
+const client = new DynamoDBClient({ region: process.env.CACHE_BUCKET_REGION });
 
 async function getPaths(tag: string) {
   try {
     const { Items } = await client.send(
       new QueryCommand({
         TableName: process.env.CACHE_DYNAMO_TABLE,
-        KeyConditionExpression: '#tag = :tag',
+        KeyConditionExpression: "#tag = :tag",
         ExpressionAttributeNames: {
-          '#tag': 'tag',
+          "#tag": "tag",
         },
         ExpressionAttributeValues: {
-          ':tag': { S: `${process.env.NEXT_BUILD_ID}/${tag}` },
+          ":tag": { S: `${process.env.NEXT_BUILD_ID}/${tag}` },
         },
       }),
-    )
+    );
     return (
       Items?.map(
         (item) =>
-          item.path?.S?.replace(`${process.env.NEXT_BUILD_ID}/`, '') ?? '',
+          item.path?.S?.replace(`${process.env.NEXT_BUILD_ID}/`, "") ?? "",
       ) ?? []
-    )
+    );
   } catch (e) {
-    console.error('Failed to get by tag', e)
-    return []
+    console.error("Failed to get by tag", e);
+    return [];
   }
 }
 ```
