docs: fix broken links

--- a/docs/pages/config/full_example.mdx
+++ b/docs/pages/config/full_example.mdx
@@ -3,7 +3,7 @@ This file need to be at the same place as your `next.config.js` file
 
 `server` in here could refer to a lambda function, a docker container, a node server or whatever that can support running nodejs code. (Even cloudflare workers in the future)
 
-For more information about the options here, take a look at the [components section](/components/overview).
+For more information about the options here, take a look at the [components section](/inner_workings/components/overview).
 
 ```ts
 import type { OpenNextConfig } from 'open-next/types/open-next'
