--- a/docs/pages/v2/advanced/architecture.mdx
+++ b/docs/pages/v2/advanced/architecture.mdx
@@ -165,7 +165,7 @@ Create a Lambda function using the code in the `.open-next/warmer-function` fold
 
 Also, create an EventBridge scheduled rule to invoke the warmer function every 5 minutes.
 
-Read more on [how warming works](/inner_workings/warming).
+Read more on [how warming works](/v2/inner_workings/warming).
 
 #### Dynamo Provider Function
 
