--- a/docs/pages/config/full_example.mdx
+++ b/docs/pages/config/full_example.mdx
@@ -89,7 +89,7 @@ const config = {
     disableIncrementalCache: true, 
     // By default, the middleware headers and cookies will override the handler headers and cookies.
     // This is executed for every request and after next config headers and middleware has been executed
-    // It can either be middleware or handler
+    // It can either be `middleware` or `handler`
     headersAndCookiesPriority: "middleware"
   }
 
